Fixed a bug where the scrollbar would stick to the viewport when using a hiding block.

--- a/src/css/scroll.css
+++ b/src/css/scroll.css
@@ -1,5 +1,12 @@
 .scroll-to-future__overlay {
     position: fixed;
+
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     pointer-events: none;
-    z-index: 10;
+    overflow: visible;
+
+    z-index: var(--scroll-to-future-z-index, 100);
 }
